@@ -342,25 +342,35 @@ nodes which were selected for this job to use.</p>
 <p style="margin-left:.2in"><b>Returns</b>: SLURM_SUCCESS if successful. On failure,
 the plugin should return SLURM_ERROR.</p>
 
-<p class="commandline">int select_p_job_suspend (struct job_record *job_ptr);</p>
+<p class="commandline">int select_p_job_suspend (struct job_record *job_ptr,
+bool indf_susp);</p>
 <p style="margin-left:.2in"><b>Description</b>: Suspend the specified job.
 Release resources for use by other jobs.</p>
-<p style="margin-left:.2in"><b>Arguments</b>:
+<p style="margin-left:.2in"><b>Arguments</b>:<br>
 <span class="commandline"> job_ptr</span>&nbsp; &nbsp;&nbsp;(input) pointer
 to the job being suspended. Data in this job record may safely be read or
 written.  The <i>nodes</i> and/or <i>node_bitmap</i> fields of this job record
-identify the nodes which were selected for this job to use.</p>
+identify the nodes which were selected for this job to use.<br>
+<span class="commandline"> indf_susp</span>&nbsp; &nbsp;&nbsp;(input) flag
+which if set indicates the job is being suspended indefinitely by the user or
+administrator. If not set, the job is being suspended temporarily for gang
+scheduling.</p>
 <p style="margin-left:.2in"><b>Returns</b>: SLURM_SUCCESS if successful. On
 failure, the plugin should return a SLURM error code.</p>
 
-<p class="commandline">int select_p_job_resume (struct job_record *job_ptr);</p>
+<p class="commandline">int select_p_job_resume (struct job_record *job_ptr,
+bool indf_susp);</p>
 <p style="margin-left:.2in"><b>Description</b>: Resume the specified job
 which was previously suspended.</p>
-<p style="margin-left:.2in"><b>Arguments</b>:
+<p style="margin-left:.2in"><b>Arguments</b>:<br>
 <span class="commandline"> job_ptr</span>&nbsp; &nbsp;&nbsp;(input) pointer
 to the job being resumed. Data in this job record may safely be read or
 written.  The <i>nodes</i> and/or <i>node_bitmap</i> fields of this job record
-identify the nodes which were selected for this job to use.</p>
+identify the nodes which were selected for this job to use.<br>
+<span class="commandline"> indf_susp</span>&nbsp; &nbsp;&nbsp;(input) flag
+which if set indicates the job is being resumed after being suspended
+indefinitely by the user or administrator. If not set, the job is being
+resumed after being temporarily suspended for gang scheduling.</p>
 <p style="margin-left:.2in"><b>Returns</b>: SLURM_SUCCESS if successful. On
 failure, the plugin should return a SLURM error code.</p>
 
@@ -467,6 +477,6 @@ to maintain data format compatibility across different versions of the plugin.</
 
 <p class="footer"><a href="#top">top</a></p>
 
-<p style="text-align:center;">Last modified 14 March 2011</p>
+<p style="text-align:center;">Last modified 24 June 2011</p>
 
 <!--#include virtual="footer.txt"-->
