@@ -1624,12 +1624,12 @@ extern int select_p_job_fini(struct job_record *job_ptr)
 #endif
 }
 
-extern int select_p_job_suspend(struct job_record *job_ptr)
+extern int select_p_job_suspend(struct job_record *job_ptr, bool indf_susp)
 {
 	return ESLURM_NOT_SUPPORTED;
 }
 
-extern int select_p_job_resume(struct job_record *job_ptr)
+extern int select_p_job_resume(struct job_record *job_ptr, bool indf_susp)
 {
 	return ESLURM_NOT_SUPPORTED;
 }
