@@ -463,29 +463,33 @@ extern int other_job_fini(struct job_record *job_ptr)
 /*
  * Suspend a job. Executed from slurmctld.
  * IN job_ptr - pointer to job being suspended
+ * indf_susp IN - set if job is being suspended indefinitely by user
+ *                or admin, otherwise suspended for gang scheduling
  * RET SLURM_SUCCESS or error code
  */
-extern int other_job_suspend(struct job_record *job_ptr)
+extern int other_job_suspend(struct job_record *job_ptr, bool indf_susp)
 {
 	if (other_select_init() < 0)
 		return SLURM_ERROR;
 
 	return (*(other_select_context->ops.job_suspend))
-		(job_ptr);
+		(job_ptr, indf_susp);
 }
 
 /*
  * Resume a job. Executed from slurmctld.
+ * indf_susp IN - set if job is being resumed from indefinite suspend by user
+ *                or admin, otherwise resume from gang scheduling
  * IN job_ptr - pointer to job being resumed
  * RET SLURM_SUCCESS or error code
  */
-extern int other_job_resume(struct job_record *job_ptr)
+extern int other_job_resume(struct job_record *job_ptr, bool indf_susp)
 {
 	if (other_select_init() < 0)
 		return SLURM_ERROR;
 
 	return (*(other_select_context->ops.job_resume))
-		(job_ptr);
+		(job_ptr, indf_susp);
 }
 
 /*
