@@ -2881,11 +2881,16 @@ extern int select_p_job_fini(struct job_record *job_ptr)
 /*
  * Suspend a job. Executed from slurmctld.
  * IN job_ptr - pointer to job being suspended
+ * IN indf_susp - set if job is being suspended indefinitely by user
+ *                or admin, otherwise suspended for gang scheduling
  * RET SLURM_SUCCESS or error code
  */
-extern int select_p_job_suspend(struct job_record *job_ptr)
+extern int select_p_job_suspend(struct job_record *job_ptr, bool indf_susp)
 {
 	int rc;
+
+	if (!indf_susp)
+		return SLURM_SUCCESS;
 
 	slurm_mutex_lock(&cr_mutex);
 	if (cr_ptr == NULL)
@@ -2898,11 +2903,16 @@ extern int select_p_job_suspend(struct job_record *job_ptr)
 /*
  * Resume a job. Executed from slurmctld.
  * IN job_ptr - pointer to job being resumed
+ * IN indf_susp - set if job is being resumed from indefinite suspend by user
+ *                or admin, otherwise resume from gang scheduling
  * RET SLURM_SUCCESS or error code
  */
-extern int select_p_job_resume(struct job_record *job_ptr)
+extern int select_p_job_resume(struct job_record *job_ptr, bool indf_susp)
 {
 	int rc;
+
+	if (!indf_susp)
+		return SLURM_SUCCESS;
 
 	slurm_mutex_lock(&cr_mutex);
 	if (cr_ptr == NULL)
